[gd_scene load_steps=15 format=3 uid="uid://cylfy3tmf2x4d"]

[ext_resource type="PackedScene" uid="uid://cf57h23ilq1xh" path="res://scenes/enemy_base/enemy_base.tscn" id="1_cm38u"]
[ext_resource type="Texture2D" uid="uid://dpatlxv0plw1u" path="res://assets/enemies/ghost.png" id="2_h8yyx"]
[ext_resource type="Script" uid="uid://cvi0npm1wgwlk" path="res://scenes/ghost/ghost.gd" id="2_x7r8w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x7r8w"]
atlas = ExtResource("2_h8yyx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bynrv"]
atlas = ExtResource("2_h8yyx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lej1e"]
atlas = ExtResource("2_h8yyx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki37b"]
atlas = ExtResource("2_h8yyx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8phmj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7r8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bynrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lej1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki37b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lej1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bynrv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8yyx"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x7r8w"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_x7r8w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bynrv"]
resource_name = "appear"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h8yyx"]
resource_name = "disappear"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bynrv"]
_data = {
&"RESET": SubResource("Animation_x7r8w"),
&"appear": SubResource("Animation_bynrv"),
&"disappear": SubResource("Animation_h8yyx")
}

[node name="Ghost" instance=ExtResource("1_cm38u")]
collision_mask = 0
script = ExtResource("2_x7r8w")
points = 200

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_8phmj")
autoplay = "default"
frame_progress = 0.100173

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_h8yyx")

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("RectangleShape2D_x7r8w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
&"": SubResource("AnimationLibrary_bynrv")
}

[node name="DisappearTimer" type="Timer" parent="." index="5"]
wait_time = 3.0
one_shot = true

[node name="AppearTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="DirectionTimer" type="Timer" parent="." index="7"]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="AppearTimer" to="." method="_on_appear_timer_timeout"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
